<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:openDrawer="start"
    android:background="@color/mybackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="0dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".08" />


        <TextView
            android:id="@+id/tv_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/gl_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="00dp"
            android:layout_margin="10dp"
            android:background="@drawable/background_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gl_1">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="250dp"
                android:background="@drawable/background_text"
                android:padding="15dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_your_name"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/et_tp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_tp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_text"
                android:ems="10"
                android:hint="@string/enter_your_telephone_no"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="phone"
                android:padding="15dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_name" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                app:layout_constraintBottom_toTopOf="@+id/btn_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_tp"
                android:background="@drawable/background_btn"/>

            <Button
                android:id="@+id/btn_view"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/view"
                app:layout_constraintBottom_toTopOf="@+id/btn_about"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_add"
                android:background="@drawable/background_btn"/>

            <Button
                android:id="@+id/btn_about"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/about"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_view"
                android:background="@drawable/background_btn"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_head">

    </com.google.android.material.navigation.NavigationView>




</androidx.drawerlayout.widget.DrawerLayout>
